New merge + optimizare